<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mvp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_note">New note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>

</resources>
